public class Main {
    public static void main(String[] args) {

        Streaming.startStream();
        Streaming.loginOrAccount("Login or register account:");



        // Login metode herunder:


        // Create account metode herunder:


    }
}
