@startuml
!pragma layout smetana

class Main{
+ static void main(String[] args)
}
class loginMenu{
- void registerUser()
+ login()
}
class Streaming{
+ searchCategories()
+ userList()
+ displayMovie()
+ displayShow()
+ displayCategories()
+ displayMyList()
+ displayWatched()


 + void endSession()
}

class User{
- LinkedList<List> userList
- String name
-String passWord
+ User(String name)
+ User(String name, passWord)
+ String getPassWord()
+ String setPassWord()
+ String getName()
+ String setName()
+ String toString()
+ save()
+ delete()
+ watch()
}
class FileIO{
+ ArrayList<String> readUserData(String path)
+ void saveData(ArrayList<String> items, String path)
+ ArrayList<String> readMovieData(String path)
+ ArrayList<String> readShowData(String path)
}
class Series{

}

class TextUI{
- Scanner scanner
+ void displayMsg(String s)
+ int promptNumeric(String msg)
+ String promptText(String msg)
+ int promptChoice(String msg, ArrayList<String> list)
}

class Movies{
- String [] moviesData
-String [] seriesData
- categories [] Movies

}



Main *-- loginMenu
loginMenu *-- Streaming
Streaming *-- TextUI
Streaming *-- Movies
Streaming *-- User
Streaming *-- FileIO
Streaming *-- Series


@enduml